--- a/index.html
+++ b/index.html
@@ -1,141 +1,127 @@
-const playerStats = {
-    level: 1,
-    hp: 100,
-    maxHp: 100,
-    mana: 20,
-    maxMana: 20,
-    gold: 0,
-    xp: 0,
-    weapon: null,
-    buffs: {},
-    inventory: {
-        "poção de cura": 3,
-        "elixir de força": 0
-    },
-    playerClass: null
-};
+             <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RPG Textual</title>
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace;
+            background-color: #1a1a1a;
+            color: #e0e0e0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
 
-const CLASSES = {
-    "guerreiro": {
-        bonus_hp: 30,
-        dano_extra: 5,
-        mana_max: 20,
-        habilidade: {
-            nome: "Golpe Poderoso",
-            custo: 10,
-            efeito: "dobro_dano_proximo_ataque"
-        },
-    },
-    "arqueiro": {
-        bonus_hp: 0,
-        dano_extra: 0,
-        mana_max: 30,
-        habilidade: {
-            nome: "Tiro Preciso",
-            custo: 15,
-            efeito: "garante_critico_proximo_ataque"
-        },
-        critico_chance: 0.3,
-        critico_dano: 2,
-    }
-};
+        .game-container {
+            width: 80%;
+            max-width: 800px;
+            border: 2px solid #555;
+            padding: 20px;
+            background-color: #333;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
+        }
 
-const WEAPONS = {
-    "espada de madeira": {
-        dano_min: 5,
-        dano_max: 10,
-        valor: 10,
-    },
-    "espada de aço": {
-        dano_min: 15,
-        dano_max: 25,
-        valor: 100,
-    },
-    "arco curto": {
-        dano_min: 5,
-        dano_max: 15,
-        valor: 10,
-    },
-    "arco longo": {
-        dano_min: 10,
-        dano_max: 30,
-        valor: 100,
-    }
-};
+        #game-title {
+            color: #4CAF50;
+            text-shadow: 2px 2px 4px #000;
+        }
 
-const ENEMIES = {
-    "goblin": {
-        hp: 50,
-        dano_min: 5,
-        dano_max: 15,
-        xp_drop: 20,
-        gold_drop_min: 5,
-        gold_drop_max: 15,
-        loot_chance: {"poção de cura": 0.3, "elixir de força": 0.1}
-    },
-    "orc": {
-        hp: 80,
-        dano_min: 10,
-        dano_max: 25,
-        xp_drop: 50,
-        gold_drop_min: 10,
-        gold_drop_max: 25,
-        loot_chance: {"poção de cura": 0.4, "elixir de força": 0.2, "espada de aço": 0.05}
-    },
-    "troll": {
-        hp: 120,
-        dano_min: 15,
-        dano_max: 35,
-        xp_drop: 80,
-        gold_drop_min: 20,
-        gold_drop_max: 40,
-        loot_chance: {"poção de cura": 0.5, "elixir de força": 0.3, "arco longo": 0.05}
-    },
-    "dragão": {
-        hp: 300,
-        dano_min: 30,
-        dano_max: 60,
-        xp_drop: 200,
-        gold_drop_min: 100,
-        gold_drop_max: 200,
-        loot_chance: {"poção de cura": 1.0, "elixir de força": 0.5, "espada de aço": 0.2, "arco longo": 0.2}
-    }
-};
+        #game-text {
+            min-height: 100px;
+            background-color: #222;
+            border: 1px solid #555;
+            padding: 15px;
+            margin: 20px 0;
+            white-space: pre-wrap;
+            text-align: left;
+            border-radius: 5px;
+        }
 
-let currentEnemy = null;
+        .stats-container {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            margin-bottom: 20px;
+        }
 
-const playerLevelEl = document.getElementById('player-level');
-const playerHpEl = document.getElementById('player-hp');
-const playerMaxHpEl = document.getElementById('player-max-hp');
-const playerManaEl = document.getElementById('player-mana');
-const playerMaxManaEl = document.getElementById('player-max-mana');
-const playerGoldEl = document.getElementById('player-gold');
-const gameTextEl = document.getElementById('game-text');
-const optionsContainer = document.querySelector('.options-container');
+        .stat {
+            background-color: #444;
+            padding: 10px;
+            border-radius: 5px;
+            margin: 5px;
+            flex: 1;
+            min-width: 100px;
+        }
 
-function updateUI() {
-    playerLevelEl.textContent = playerStats.level;
-    playerHpEl.textContent = playerStats.hp;
-    playerMaxHpEl.textContent = playerStats.maxHp;
-    playerManaEl.textContent = playerStats.mana;
-    playerMaxManaEl.textContent = playerStats.maxMana;
-    playerGoldEl.textContent = playerStats.gold;
-}
+        .stat h3 {
+            margin: 0 0 5px 0;
+            color: #888;
+            font-size: 0.9em;
+        }
 
-function renderButtons(options) {
-    optionsContainer.innerHTML = '';
-    options.forEach(option => {
-        const button = document.createElement('button');
-        button.className = 'action-button';
-        button.textContent = option.text;
-        button.onclick = option.action;
-        optionsContainer.appendChild(button);
-    });
-}
+        .stat p {
+            margin: 0;
+            font-size: 1.2em;
+            font-weight: bold;
+        }
 
-function showMessage(message) {
-    gameTextEl.textContent = message;
-}
+        .options-container {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
 
-// --- Funções de Lógica do Jogo (Adaptadas de Python para JavaScript) ---
-function chooseClass
+        .action-button {
+            padding: 10px 20px;
+            font-size: 1em;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .action-button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+<body>
+    <div class="game-container">
+        <h1 id="game-title">RPG Textual</h1>
+        
+        <div class="stats-container">
+            <div class="stat">
+                <h3>Nível</h3>
+                <p id="player-level">1</p>
+            </div>
+            <div class="stat">
+                <h3>Vida</h3>
+                <p><span id="player-hp">100</span>/<span id="player-max-hp">100</span></p>
+            </div>
+            <div class="stat">
+                <h3>Mana</h3>
+                <p><span id="player-mana">20</span>/<span id="player-max-mana">20</span></p>
+            </div>
+            <div class="stat">
+                <h3>Ouro</h3>
+                <p id="player-gold">0</p>
+            </div>
+        </div>
+
+        <div id="game-text">Bem-vindo ao mundo de RPG!</div>
+
+        <div class="options-container">
+            </div>
+    </div>
+
+    <script src="SEU_ARQUIVO.js"></script>
+</body>
+</html>
