--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-             <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -122,6 +122,6 @@
             </div>
     </div>
 
-    <script src="SEU_ARQUIVO.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
